[package]
authors = ["Matvei <matvei@wheel.me>"]
edition = "2018"
readme = "README.md"
name = "stm32f0-can-ws2812-led"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
stm32f0xx-hal = {version = "0.16", features = ["stm32f042", "rt"]}
nb = "1.0.0"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
cortex-m-rtic = { version = "0.5.5" }
embedded-hal = "0.2"
smart-leds-trait = {version = "0.2.0"}
smart-leds = {version = "0.3.0"}
ws2812-spi = {version = "0.2.0"}

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f0-can-ws2812-led"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = 3

[features]
mosi_idle_high = []